examples/test/testpolicy14494.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14494
  namespace: namespace48
spec:
  podSelector:
    matchLabels:
      key17: value5
      key43: value36
      key37: value1
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value39
      podSelector:
        matchLabels:
          key37: value39
          key41: value20
